--- a/view/gioi-thieu.html
+++ b/view/gioi-thieu.html
@@ -219,6 +219,20 @@
             </div>
           </div>
           <div class="main">
+            <div class="title-page">
+              <h1>GIỚI THIỆU</h1>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur nesciunt repellat officiis omnis alias non quas provident eveniet, corrupti laborum fuga, consequuntur deserunt perferendis dicta debitis, aspernatur eaque atque quos.</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur nesciunt repellat officiis omnis alias non quas provident eveniet, corrupti laborum fuga, consequuntur deserunt perferendis dicta debitis, aspernatur eaque atque quos.</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur nesciunt repellat officiis omnis alias non quas provident eveniet, corrupti laborum fuga, consequuntur deserunt perferendis dicta debitis, aspernatur eaque atque quos.</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur nesciunt repellat officiis omnis alias non quas provident eveniet, corrupti laborum fuga, consequuntur deserunt perferendis dicta debitis, aspernatur eaque atque quos.</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur nesciunt repellat officiis omnis alias non quas provident eveniet, corrupti laborum fuga, consequuntur deserunt perferendis dicta debitis, aspernatur eaque atque quos.</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur nesciunt repellat officiis omnis alias non quas provident eveniet, corrupti laborum fuga, consequuntur deserunt perferendis dicta debitis, aspernatur eaque atque quos.</p><img src="../img/slider-1.png"/>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur nesciunt repellat officiis omnis alias non quas provident eveniet, corrupti laborum fuga, consequuntur deserunt perferendis dicta debitis, aspernatur eaque atque quos.</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur nesciunt repellat officiis omnis alias non quas provident eveniet, corrupti laborum fuga, consequuntur deserunt perferendis dicta debitis, aspernatur eaque atque quos.</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur nesciunt repellat officiis omnis alias non quas provident eveniet, corrupti laborum fuga, consequuntur deserunt perferendis dicta debitis, aspernatur eaque atque quos.</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur nesciunt repellat officiis omnis alias non quas provident eveniet, corrupti laborum fuga, consequuntur deserunt perferendis dicta debitis, aspernatur eaque atque quos.</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur nesciunt repellat officiis omnis alias non quas provident eveniet, corrupti laborum fuga, consequuntur deserunt perferendis dicta debitis, aspernatur eaque atque quos.</p>
+            </div>
           </div>
         </div>
       </section>
