--- a/view/thanh-toan.html
+++ b/view/thanh-toan.html
@@ -23,13 +23,13 @@
       <section class="header-top">
         <div class="container">
           <div class="row">
-            <div class="col-xl-6 d-none d-xl-block">
+            <div class="col-xl-5 d-none d-xl-block">
               <h5>Chào mừng quý khách đến với Siêu thị ghế văn phòng Thanh Thúy</h5>
             </div>
-            <div class="col-xl-6 text-center text-xl-right">
+            <div class="col-xl-7 text-center text-xl-right">
               <ul>
-                <li><i class="mdi mdi-email-outline"></i>info@triviet.net</li>
-                <li><i class="mdi mdi-map-marker-radius"></i>311K13 Đường 8, KP1, P. An Phú, Quận 2, TP.HCM</li>
+                <li><i class="mdi mdi-email-outline"></i>sieuthighevanphong@gmail.com</li>
+                <li><i class="mdi mdi-map-marker-radius"></i>108B Đông Hưng Thuận, P. Đông Hưng Thuận, Quận 12, Tp.HCM</li>
               </ul>
             </div>
           </div>
@@ -39,12 +39,12 @@
         <div class="container">
           <div class="logo"><a href="index.html"><img src="../img/logo.png"/></a></div>
           <div class="row">
-            <div class="col-md-6">
+            <div class="col-sm-6 d-none d-sm-block">
               <div class="hotline">
                 <h3><i class="mdi mdi-deskphone"></i>0912 345 678</h3>
               </div>
             </div>
-            <div class="col-md-6 text-right">
+            <div class="col-sm-6 text-right">
               <div class="custom-header"><a class="toggleMenu d-inline-block d-lg-none"><i class="mdi mdi-menu"></i></a><a class="search-btn"><i class="mdi mdi-magnify"></i></a><a class="cart-btn" href="gio-hang.html" title="Nhấn để xem giỏ hàng"><i class="mdi mdi-cart-outline"></i><span>(10)</span></a></div>
             </div>
           </div>
@@ -67,6 +67,7 @@
           <div class="main-menu">
             <ul class="nav">
               <div class="nav-close"><i class="mdi mdi-close d-block d-lg-none"></i></div>
+              <li class="nav-item category-btn d-block d-lg-none"><a>DANH MỤC SẢN PHẨM</a></li>
               <li class="nav-item"><a href="index.html">Ghế văn phòng</a></li>
               <li class="nav-item"><a href="gioi-thieu.html">Giới thiệu</a></li>
               <li class="nav-item"><a href="huong-dan-thanh-toan.html">Hướng dẫn thanh toán</a></li>
@@ -80,6 +81,40 @@
       </section>
       <div class="overlay-menu"></div>
     </header>
+    <div class="modal quickview fade product-modal-1 show" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle">
+      <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalCenterTitle">Xem nhanh sản phẩm</h5>
+            <button class="close" type="button" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-lg-6">
+                <div class="modal-img"><img src="../img/product-1.png"/></div>
+              </div>
+              <div class="col-lg-6">
+                <div class="quickview-detail">
+                  <h2>Logitech G502 Proteus Spectrum</h2>
+                  <h4 class="price-product">Giá: Liên hệ</h4>
+                  <h5>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.</h5>
+                  <div class="quantity"><span>Số lượng: </span>
+                    <button class="waves-effect waves-light">-</button>
+                    <input type="number" value="1" min="1"/>
+                    <button class="waves-effect waves-light">+</button>
+                    <button class="custom-cart">thêm vào giỏ</button>
+                  </div>
+                </div>
+                <div class="tags">Thẻ tag: <span> <a href="#">Đặc sản Hàn quốc</a></span>,<span> <a href="#">Thời trang Hàn Quốc</a></span></div>
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button class="btn btn-light" type="button" data-dismiss="modal">Đóng</button>
+          </div>
+        </div>
+      </div>
+    </div>
     <article>
       <section class="bread-crumb">
         <div class="container">
@@ -227,6 +262,60 @@
         </div>
       </section>
     </article>
+    <section class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4 col-md-6">
+            <div class="contact">
+              <h4>thông tin liên hệ</h4>
+              <h5>SIÊU THỊ GHẾ VĂN PHÒNG THANH THÚY</h5>
+              <ul>
+                <li><i class="mdi mdi-map-outline"></i>Địa chỉ: 108B Đông Hưng Thuận, P. Đông Hưng Thuận, Quận 12, Tp.HCM</li>
+                <li><i class="mdi mdi-deskphone"></i>Hotline: 0937 688 238 - 01263 818 581</li>
+                <li><i class="mdi mdi-email-outline"></i>Email: sieuthighevanphong@gmail.com</li>
+                <li><i class="mdi mdi-note-outline"></i>Mã số thuế: 345783094890dfg</li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-lg-2 col-md-6">
+            <div class="about">
+              <h4>về chúng tôi</h4>
+              <ul>
+                <li><a href="gioi-thieu.html">Giới thiệu</a></li>
+                <li><a href="huong-dan-mua-hang.html">Hướng dẫn mua hàng</a></li>
+                <li><a href="thong-tin.html">Thông tin</a></li>
+                <li><a href="khuyen-mai.html">Khuyến mãi</a></li>
+                <li><a href="lien-he.html">Liên hệ</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="policy">
+              <h4>về chúng tôi</h4>
+              <ul>
+                <li><a href="chinh-sach.html">Chính sách đổi trả hàng</a></li>
+                <li><a href="chinh-sach.html">Chính sách thanh toán</a></li>
+                <li><a href="chinh-sach.html">Chính sách bảo mật thông tin</a></li>
+                <li><a href="chinh-sach.html">Chính sách vận chuyển </a></li>
+                <li><a href="chinh-sach.html">Chính sách bảo hành</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="social">
+              <h4>mạng xã hội</h4><a href="#"><i class="mdi mdi-facebook"></i></a><a href="#"><i class="mdi mdi-twitter"></i></a><a href="#"><i class="mdi mdi-youtube"></i></a><a href="#"><i class="mdi mdi-google-plus"></i></a>
+              <ul>
+                <li>Đang online: 55</li>
+                <li>Tổng truy cập: 555555</li>
+              </ul><img src="../img/bo-cong-thuong.png"/>
+            </div>
+          </div>
+        </div>
+        <div class="copyright text-center">
+          <h5>Copyright @ 2018 Sieu Thi Ghe Van Phong Thanh Thuy. All Reserved. Designed by Tri Viet</h5>
+        </div>
+      </div>
+    </section>
     <script src="../js/jquery-3.3.1.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/mdb.min.js"></script>
