--- a/scss/_default.scss
+++ b/scss/_default.scss
@@ -258,13 +258,13 @@ body {
 }
 
 .pagination {
-  margin-bottom: 30px;
+  margin-bottom: 10px;
   margin-top: 30px;
 
   .page-item .page-link {
     background: none;
-    border: 1px solid #e1e1e1;
-    color: #5E5E5E;
+    border: 1px solid #111111;
+    color: white;
     border-radius: 3px;
     transition: .3s;
     width: 40px;
@@ -273,13 +273,13 @@ body {
     text-align: center;
     line-height: 25px;
     font-weight: bold;
-    background: white;
+    background: #252525;
 
     &:hover,
+    &:focus,
     &.active {
       background: $main_color;
       color: white;
-      border-color: $main_color;
     }
   }
 }
@@ -917,116 +917,68 @@ body {
 .footer {
   background: #252525;
   color: white;
+  padding-top: 30px;
 
-  .contact {
-    .box-contact {
-      text-align: center;
-      height: 130px;
-      padding: 15px 30px;
-      transition: .3s;
+  h4 {
+    margin-bottom: 20px;
+    padding-bottom: 5px;
+    border-bottom: 1px solid #383838;
+    text-transform: uppercase;
+    font-weight: 600;
+  }
+
+  ul {
+    li {
+      margin-bottom: 15px;
+      color: #ccc;
 
       i {
-        font-size: 30px;
+        margin-right: 10px;
         color: $main_color;
-        margin-bottom: 10px;
+        font-size: 14px;
+      }
+
+      a {
+        color: #ccc;
         transition: .3s;
-      }
-
-      h5 {
-        height: 50px;
-        vertical-align: middle;
-      }
-
-      &.address {
-        background: #383838;
 
         &:hover {
-          background: $main_color;
-          
-          i {
-            color: white;
-          }
-        }
-      }
-
-      &.phone {
-        background: #252525;
-
-        &:hover {
-          background: $main_color;
-          
-          i {
-            color: white;
-          }
-        }
-      }
-
-      &.email {
-        background: #161616;
-
-        &:hover {
-          background: $main_color;
-          
-          i {
-            color: white;
-          }
-        }
-      }
-
-      &.name {
-        background: $main_color;
-        position: relative;
-
-        h2 {
-          position: absolute;
-          top: 50%;
-          left: 50%;
-          transform: translate(-50%, -50%);
-          width: 250px;
-          text-transform: uppercase;
-          font-weight: bold;
+          color: $main_color;
         }
       }
     }
   }
 
-  .right {
-    margin-top: 50px;
+  i {
+    font-size: 20px;
+    margin-right: 15px;
+    transition: .3s;
 
-    h4 {
-      text-transform: uppercase;
-      font-weight: bold;
-      margin-bottom: 20px;
+    &:hover {
+      color: $main_color;
     }
+  }
 
-    .info h5 {
-      font-weight: bold;
-      margin-bottom: 15px;
-    }
-
-    p {
-      color: #cccccc;
-    }
-
+  .social {
     ul {
-      li {
-        padding-bottom: 15px;
-
-        a {
-          color: #cccccc;
-          transition: .3s;
-
-          &:hover {
-            color: $main_color;
-          }
-        }
-      }
+      margin-top: 15px;
     }
-
-    .copyright {
-      padding: 15px 0;
-      border-top: 1px solid #595959;
-      margin-top: 30px;
+    
+    img {
+      width: 200px;
     }
+  }
+
+  .contact {
+    h5 {
+      font-weight: 600;
+      margin-bottom: 15px; 
+    }
+  }
+
+  .copyright {
+    margin-top: 15px;
+    padding: 10px 0;
+    border-top: 1px solid #383838;
   }
 }
