--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -35,7 +35,7 @@ $main_color: #A1C45A;
 
 @media (min-width: 1260px) {
   .container {
-    max-width: 1230px;
+    max-width: 1260px;
   }
 }
 
@@ -51,6 +51,10 @@ $main_color: #A1C45A;
     a {
       font-size: 14px;
     }
+  }
+
+  .product-zone {
+    grid-template-columns: repeat(3, 1fr);
   }
 }
 
@@ -162,54 +166,131 @@ $main_color: #A1C45A;
       padding: 0;
     }
   }
+
+  .content .container {
+    display: block;
+  }
+
+  .left {
+    position: fixed;
+    width: 300px;
+    left: 0;
+    top: 0;
+    z-index: 1055;
+    height: 100vh;
+    overflow: scroll;
+    transform: translateX(-300px);
+    transition: .3s;
+
+    &.active {
+      transform: none;
+    }
+  }
+
+  .category {
+    margin-bottom: 0;
+  }
+
+  .seller {
+    display: none;
+  }
 }
 
 
 
 @media (max-width: 767px) {
-  article {
-    padding-top: 60px;
-  }
-  .menu {
-    position: fixed;
-    width: 100%;
-    top: 0;
-    height: 60px;
-    z-index: 999;
-
-    .container {
-      position: absolute;
-      max-width: 100%;
-    }
-
-    .sidebar {
-      width: 200px;
-    }
-
-    .main-menu {
-      .cart-btn {
-        font-size: 22px;
-        top: 2px;
-      }
-
-      .toggleMenu {
-        top: -5px;
-        right: 35px;
-        padding: 0;
-      }
-      
-      .search-btn {
-        top: -3px;
-      }
-    }
+  .header-bottom .logo {
+    left: 55%;
   }
 
+  .cart-page-product .quantity button {
+    display: block;
+    margin-left: 19px;
+  }
+
+  .product-zone, .similar {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .main {
+    padding: 0;
+    background: none;
+    border: 0;
+    box-shadow: none;
+  }
 }
 
 @media (max-width: 575px) {
+  article {
+    padding-top: 60px;
+  }
 
+  .header-top {
+    display: none;
+  }
+
+  .header-bottom {
+    background: black;
+    color: white;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+    height: 60px;
+
+    .logo {
+      left: 15px;
+      transform: none;
+      
+      img {
+        height: 40px;
+      }
+    }
+
+    .custom-header {
+      margin: 10px 0;
+    }
+  }
+
+  .slider {
+    margin-top: -2px;
+
+    .owl-theme .owl-nav button.owl-prev, 
+    .owl-theme .owl-nav button.owl-next {
+      border: 0;
+      top: 45%;
+
+      &:hover {
+        color: $main_color;
+        background: none;
+      }
+    }
+  }
+
+  .cart-page-product-1 img {
+    float: none;
+    margin-right: 0;
+    margin-bottom: 10px;
+  }
+
+  .product-zone, .similar {
+    grid-column-gap: 15px;
+    grid-row-gap: 30px;
+  }
+
+  .search-form {
+    margin: 0 -15px;
+    margin-top: 2px;
+  }
 }
 
-@media (max-width: 400px) {
-  
+@media (max-width: 450px) {
+  .box-product-detail h4 span {
+    display: block;
+    margin: 0;
+  }
+
+  .search-form select {
+    width: 120px;
+  }
 }
